force-app/main/default/objects/FulfillmentOrder/fields/AmwareSentOn__c.field-meta.xml
<CustomField>
    <fullName>AmwareSentOn__c</fullName>
    <label>Amware Sent On</label>
    <type>DateTime</type>
</CustomField>