force-app/main/default/objects/FulfillmentOrder/fields/AmwareShipDate__c.field-meta.xml
<CustomField>
    <fullName>AmwareShipDate__c</fullName>
    <description>It is used to store the Ship Date from Amware</description>
    <inlineHelpText>Ship Date from Amware</inlineHelpText>
    <label>Amware Ship Date</label>
    <type>DateTime</type>
</CustomField>