force-app/main/default/objects/FulfillmentOrder/fields/PositiveSentOn__c.field-meta.xml
<CustomField>
    <fullName>PositiveSentOn__c</fullName>
    <label>Positive Sent On</label>
    <type>DateTime</type>
</CustomField>