force-app/main/default/objects/FulfillmentOrder/fields/PositiveStatus__c.field-meta.xml
<CustomField>
    <fullName>PositiveStatus__c</fullName>
    <label>Positive Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>